# PyOrbital

./: README.md  data.html  genindex.html  index.html  modules.html  py-modindex.html  pyorbital.html  pyproject.toml
.github/workflows/: ci.yml
_modules/: calculation.html  index.html
_sources/: index.rst.txt
docs/: conf.py
docs/_build/doctrees/: calculation.doctree  data.doctree  environment.pickle  index.doctree  modules.doctree  pyorbital.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  calculation.html  objects.inv  search.html  searchindex.js
docs/_build/html/_modules/: pyorbital.html
docs/_build/html/_sources/: modules.rst.txt  pyorbital.rst.txt
src/: calculation.py  data.py  pyorbital.py
src/pyorbital/: calculation.py  pyorbital.py
tests/: test_complete.py
