[project]
name = "PyOrbital"
description = "A simple program to make basic orbital mechanics calculations"
authors = [
    { name = 'Maxime Huvelin', email = 'maxime.huvelin@estaca.eu' },
    {name = "Samuel L'Hermitte", email = "samuel.lhermitte@estaca.eu"},
]
version = "0.1.0"
dependencies = [
    "pydantic",
    "sphinx>,
    "sphinx-rtd-theme,
    "pytest",
    "pylint",
    "black",
    "coverage",
]
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.urls]
homepage= "https://github.com/MaxHuv/PyOrbital"



